# mcp_emi_server_deployment

./: .env  .env.example  README.md  emi_calculator.py  main.py  manifest.json  pyproject.toml  requirements.txt
src/mcpdeployment/: __main__.py  emi_calculator.py
